--- a/basic2.html
+++ b/basic2.html
@@ -12,7 +12,7 @@
 		Math.max(...array)
 		)
 
-		array = [1, 7, -3, 9,]
+		function array = [1, 7, -3, 9,]
 		let max = array[0];
 		for (let i = 1; i < array.length; ++i) {
 		if (array[i] > max) {
@@ -21,6 +21,7 @@
 		}
 
 		document.write(max);
+		array();
 		</script>
 </body>
 </html>
